# gwa

./: CMakeLists.txt  README.md
include/headers/: Camera.h  Renderer.h
src/core/: Main.cpp
